using UnityEngine;
using UnityEngine.Tilemaps;

public class Player : MonoBehaviour
{
    private Rigidbody2D _rb2D;
    private Animator _animator;
    private SpriteRenderer _spriteRenderer;

    [Header("Movement Settings")]
    public float speed = 2f;
    public float jumpForce = 4f;

    private bool _isGrounded;
    private bool _isJumping;

    private Tilemap _tilemap;  // R√©f√©rence au Tilemap de la sc√®ne

    private void Start()
    {
        _rb2D = GetComponent<Rigidbody2D>();
        _animator = GetComponent<Animator>();
        _spriteRenderer = GetComponent<SpriteRenderer>();

        // R√©cup√©rer le Tilemap de la sc√®ne
        _tilemap = GameObject.Find("Tilemap").GetComponent<Tilemap>();
    }

    private void Update()
    {
        HandleMovement();
        HandleJump();
        HandleAnimations();
        FlipSprite();
    }

    // üîÑ **D√©placement horizontal**
    private void HandleMovement()
    {
        float moveX = Input.GetAxisRaw("Horizontal");
        Vector2 velocity = _rb2D.linearVelocity;

        velocity.x = moveX * speed;
        _rb2D.linearVelocity = new Vector2(velocity.x, _rb2D.linearVelocityY);
    }

    // ü¶ò **Saut**
    private void HandleJump()
    {
        if (Input.GetButtonDown("Jump") && _isGrounded)
        {
            _rb2D.linearVelocity = new Vector2(_rb2D.linearVelocityX, jumpForce);
            _isJumping = true;
            _isGrounded = false;
            _animator.SetTrigger("Jump");
        }
    }

    // üé• **Animations**
    private void HandleAnimations()
    {
        float moveX = Mathf.Abs(Input.GetAxisRaw("Horizontal"));
        _animator.SetBool("IsRunning", _isGrounded && moveX > 0);
        _animator.SetBool("IsJumping", !_isGrounded);
    }

    // üîÑ **Changer la direction du sprite**
    private void FlipSprite()
    {
        float moveX = Input.GetAxisRaw("Horizontal");

        if (moveX > 0)
            _spriteRenderer.flipX = false;
        else if (moveX < 0)
            _spriteRenderer.flipX = true;
    }

    // üìê **D√©tecter le contact avec le sol**
    private void OnCollisionEnter2D(Collision2D collision)
    {
        CheckGrounded(collision);
    }

    // üìê **D√©tecter si le joueur reste au sol**
    private void OnCollisionStay2D(Collision2D collision)
    {
        CheckGrounded(collision);
    }

    // üìê **G√©rer la sortie de contact avec le sol**
    private void OnCollisionExit2D(Collision2D collision)
    {
        if (collision.gameObject.CompareTag("Ground"))
        {
            _isGrounded = false;
        }
    }

    // üß™ **V√©rification de la normale de la surface pour d√©terminer si c'est le sol**
    private void CheckGrounded(Collision2D collision)
    {
        foreach (ContactPoint2D contact in collision.contacts)
        {
            // ‚úÖ Seul le contact avec une normale pointant vers le haut est consid√©r√© comme le sol
            if (contact.normal.y > 0.5f)
            {
                _isGrounded = true;
                _isJumping = false;
                return;
            }
        }
    }
}
